<resources>
    <string name="app_name">Bank Aldam(bloodbank)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bttn_name">تخطي</string>
    <string name="text_remmper">هل نسيت كلمة المرور</string>
    <string name="btt_login">دخول</string>
    <string name="bttn_newacount">حساب جديد</string>
    <string name="text_forgetpassword">نسيت كلمة المرور</string>
    <string name="btt_sendmssg_phonnmbe">ارسال</string>
    <string name="phon_numpet">رقم الهاتف</string>
    <string name="enter_password">كلمة المرور</string>
    <string name="remmper_me">تذكرني</string>
    <string name="text_chang_Pasword">كود تغيير كلة المرور</string>
    <string name="validit_cod">كود التحقق</string>
    <string name="new_password">كلمة المرور الجديده</string>
    <string name="confirm_password">تاكيد كلمة المرور</string>
    <string name="btt_chang_password">تغيير الباسورد</string>
    <string name="creet_new_acount">حساب جديدي</string>
    <string name="the_name">الاسم</string>
    <string name="email"> البريد الالكتروني</string>
    <string name="pircday_date">تاريخ الميلاد</string>
    <string name="blood_typ">فصيلة الدم</string>
    <string name="last_dat_todonat">اخر تاريخ للتبرع</string>
    <string name="governorate">المحافظه</string>
    <string name="city">المدينه</string>
    <string name="sign_up">تسجيل</string>
    <string name="search_posts">ادخل كلمة للبحث هنا...</string>

    <array name="splash_array">
        <item>@drawable/ic_info</item>
        <item>@drawable/ic_info1</item>
    </array>


    <!--<array name="blood_typ">-->
    <!--<item>O+</item>-->
    <!--<item>O-</item>-->
    <!--<item>A+</item>-->
    <!--<item>A-</item>-->
    <!--<item>AB+</item>-->
    <!--<item>AB-</item>-->
    <!--</array>-->
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_informayion">معلوماتي</string>
    <string name="setin_ntification">اعدادت الاشعارات</string>
    <string name="favorit">المفضله</string>
    <string name="main">الرئيسيه</string>
    <string name="instruc_user">تعليمات الاستخدام</string>
    <string name="contactus">تواصل معنا</string>
    <string name="aboutapp">عن التطبيق</string>
    <string name="evluatapp">تقييم التطبيق علي المتجر</string>
    <string name="sginout">تسجيل خروج</string>
    <string name="errorPassword_Input">at least 6 characters</string>
    <string name="title_artical">title</string>
    <string name="Person_name">الإسم: محمد محمد</string>
    <string name="Person_age">العمر: 25 سنة</string>
    <string name="Person_blood_type">فصيلة الدم: A-</string>
    <string name="Person_blood_num">عدد الأكياس المطلوبة: 3 أكياس</string>
    <string name="Person_hospital_name">المستشفى: الدولي </string>
    <string name="Person_hospital_address">المستشفى: شارع عبدالعزيز </string>
    <string name="Person_phone_number">رقم الجوال: 01018492826</string>
    <string name="person_city">المدينة: المنصورة</string>
    <string name="person_details">التفاصيل</string>
    <string name="conect">اتصال</string>
    <string name="info_updat">تعديل البيانات</string>
    <string name="texet_seting_votifc">
        هذا النص هو مثال لنص يمكن استبداله في نفس المساحه
        هذا النص هو مثال لنص يمكن استبداله في نفس المساحه
        هذا النص هو مثال لنص يمكن استبداله في نفس المساحه</string>
    <string name="save">حفظ</string>
    <string name="text_about_app">
        هذا النص هو مثال لنص هذا النص هو مثال لنص
        هذا النص هو مثال لنص هذا النص هو مثال لنص
        هذا النص هو مثال لنص هذا النص هو مثال لنص
        هذا النص هو مثال لنص هذا النص هو مثال لنص
        هذا النص هو مثال لنص هذا النص هو مثال لنص
        هذا النص هو مثال لنص هذا النص هو مثال لنص</string>
    <string name="adress_massg">عنوان النص</string>
    <string name="edite_massg">نص الرساله</string>
    <string name="title">\@string/title</string>
    <string name="no_internet">لايوجد شبكه</string>
    <string name="comments">ملاحظات</string>
    <string name="send_request">ارسال الطلب</string>
    <string name="edit_name">الاسم</string>
    <string name="age">العمر</string>
    <string name="blood_type">فصيلةالدم</string>
    <string name="number">عددالاكياس</string>
    <string name="hospital_name">اسم المستشفي</string>
    <string name="hospital_address">عنوان المستشفي</string>
    <string name="location">الموقع</string>
    <string name="state">المدينه</string>
    <string name="title_activity_map_location">Map</string>
    <string name="GPSAlertDialogMessage">GPS Alert Dialog Messg</string>
    <string name="GPSAlertDialogTitle">GPS Alert Dialog Setting</string>
    <string name="cancel">Cancel</string>


</resources>
