<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_splash"
    tools:context=".ui.fragment.loginscreen.ChangPasswordFragment">



    <ImageView
        android:id="@+id/logo_id"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginTop="@dimen/album_dp_50"
        android:src="@drawable/ic_logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/album_dp_10"
        android:layout_gravity="center"
        android:text="@string/text_chang_Pasword"
        android:textSize="@dimen/album_sp_18"
        />

    <EditText
        android:id="@+id/id_sms_pin_cod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/album_dp_10"
        android:layout_marginLeft="@dimen/album_dp_10"
        android:layout_marginRight="@dimen/album_dp_10"
        android:hint="@string/validit_cod"/>
    <EditText
        android:id="@+id/new_pasword_pncod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/album_dp_10"
        android:layout_marginLeft="@dimen/album_dp_10"
        android:layout_marginRight="@dimen/album_dp_10"
        android:hint="@string/new_password"/>
    <EditText
        android:id="@+id/confirm_pasword_picod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/album_dp_10"
        android:layout_marginLeft="@dimen/album_dp_10"
        android:layout_marginRight="@dimen/album_dp_10"
        android:hint="@string/confirm_password"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/album_dp_50"
        android:layout_marginLeft="@dimen/album_dp_10"
        android:layout_marginRight="@dimen/album_dp_10"
        android:background="#00C853"
        android:textSize="@dimen/album_dp_20"
        android:textColor="@color/cardview_light_background"
        android:id="@+id/chang_password"
        android:text="@string/btt_chang_password"



        />





</LinearLayout>