<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_splash"
    tools:context=".ui.fragment.loginscreen.LoginFragment">

    <ImageView
        android:id="@+id/logo_id"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginTop="@dimen/album_dp_40"
        android:src="@drawable/ic_logo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_id"
        android:layout_marginTop="@dimen/album_dp_10"
        android:layout_marginLeft="@dimen/album_dp_10"
        android:layout_marginRight="@dimen/album_dp_10"
        android:hint="@string/phon_numpet"
        android:inputType="number"
        android:id="@+id/phone_number_id"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_id"
        android:layout_marginTop="@dimen/album_dp_10"
        android:layout_marginLeft="@dimen/album_dp_10"
        android:layout_marginRight="@dimen/album_dp_10"
        android:hint="@string/enter_password"
        android:inputType="number"
        android:id="@+id/pasword_text_id"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"

        >

        <TextView
            android:id="@+id/text_togo_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:drawableRight="@drawable/ic_report_problem_black_24dp"
            android:drawablePadding="@dimen/album_dp_10"
            android:gravity="center"
            android:padding="@dimen/album_dp_10"
            android:text="@string/text_remmper" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"

            >

            <CheckBox
                android:id="@+id/check_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layoutDirection="rtl"
                android:padding="@dimen/album_dp_10"
                android:text="@string/remmper_me" />
        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/album_dp_10"
        android:layout_marginLeft="@dimen/album_dp_10"
        android:layout_marginRight="@dimen/album_dp_10"
        android:background="#00C853"
        android:textSize="@dimen/album_dp_20"
        android:textColor="@color/cardview_light_background"
        android:id="@+id/btt_login"
        android:text="@string/btt_login"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/album_dp_20"
        android:layout_marginLeft="@dimen/album_dp_10"
        android:layout_marginRight="@dimen/album_dp_10"
        android:background="#0091EA"
        android:textSize="@dimen/album_dp_20"
        android:textColor="@color/cardview_light_background"
        android:id="@+id/btt_niew_acount"
        android:text="@string/bttn_newacount"
        />


</LinearLayout>