<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.fragment.CreatRequestDonationFragment">

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/album_dp_10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_dp_40"
                app:hintEnabled="false"
                android:layout_margin="8dp">

                <EditText
                    android:padding="@dimen/album_dp_6"
                    android:background="@color/durban_White"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/name_editText"
                    android:hint="@string/edit_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/album_dp_10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_dp_40"
                app:hintEnabled="false"
                android:layout_margin="8dp">

                <EditText
                    android:padding="@dimen/album_dp_6"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/durban_White"

                    android:id="@+id/age_editText"
                    android:hint="@string/age" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:layout_marginTop="@dimen/album_dp_10"
                android:background="@color/durban_White"
                android:id="@+id/blood_typeSpinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_dp_40"
                android:hint="@string/blood_type"
                android:padding="@dimen/album_dp_6"
                android:layout_margin="8dp"/>


            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/album_dp_10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_dp_40"
                app:hintEnabled="false"
                android:layout_margin="@dimen/album_dp_8">

                <EditText
                    android:id="@+id/bags_number_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/number"
                    android:background="@color/durban_White"
                    android:padding="@dimen/album_dp_6"
                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/album_dp_10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_dp_40"
                android:layout_margin="8dp">

                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/hospital_name_editText"
                    android:layout_height="match_parent"
                    android:hint="@string/hospital_name"
                    android:background="@color/durban_White"
                    android:padding="@dimen/album_dp_6"
                    />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2"
                android:layout_margin="8dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="@dimen/album_dp_1"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    app:hintEnabled="false">

                    <EditText
                        android:layout_width="match_parent"
                        android:id="@+id/hospital_address_editText"
                        android:background="@color/durban_White"
                        android:layout_height="match_parent"
                        android:hint="@string/hospital_address"
                        android:padding="@dimen/album_dp_6"
                        />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="@dimen/album_dp_1"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/album_dp_8"
                    android:layout_weight="0.5"
                    android:layout_marginEnd="@dimen/album_dp_8"
                    android:id="@+id/my_locationButton"
                    android:text="@string/location" />


            </LinearLayout>


            <Spinner
                android:layout_marginTop="@dimen/album_dp_10"
                android:id="@+id/state_spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_dp_40"
                android:hint="@string/state"
                android:background="@color/durban_White"
                android:padding="@dimen/album_dp_6"
                android:layout_margin="8dp"/>

            <Spinner
                android:layout_marginTop="@dimen/album_dp_10"
                android:id="@+id/city_spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_dp_40"
                android:hint="@string/city"
                android:background="@color/durban_White"
                android:padding="@dimen/album_dp_6"
                android:layout_margin="8dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/album_dp_10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_dp_40"
                app:hintEnabled="false"
                android:layout_margin="8dp">

                <EditText
                    android:id="@+id/phone_number_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phon_numpet"
                    android:background="@color/durban_White"
                    android:padding="@dimen/album_dp_6"
                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="@dimen/album_dp_10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_dp_100"
                android:layout_margin="8dp"
                app:hintEnabled="false">

                <EditText
                    android:layout_width="match_parent"
                    android:id="@+id/comments_editText"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:hint="@string/comments"
                    android:background="@color/durban_White"
                    android:padding="@dimen/album_dp_6"
                    />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/album_dp_8"
                android:background="@color/colorBlueDark"
                android:text="@string/send_request"
                android:id="@+id/send_button"
                android:textColor="@android:color/white" />

        </LinearLayout>


    </ScrollView>

