<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.donation.InformationRequestDetail">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--tools:context=".ui.activity.InformationRequestDetailActivity"-->


            <TextView
                android:id="@+id/name_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_dp_50"
                android:padding="@dimen/album_dp_6"
                android:text="@string/Person_name"
                android:layout_marginTop="@dimen/album_dp_10"
                android:layout_marginStart="@dimen/album_dp_10"
                android:layout_marginEnd="@dimen/album_dp_10"
                />
            <TextView
                android:id="@+id/age_detail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="@dimen/album_dp_6"
                android:text="@string/age"
                android:layout_marginTop="@dimen/album_dp_10"
                android:layout_marginStart="@dimen/album_dp_10"
                android:layout_marginEnd="@dimen/album_dp_10"
                />
            <TextView
                android:id="@+id/bloodTyp_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_dp_50"
                android:padding="@dimen/album_dp_6"
                android:text="@string/blood_typ"
                android:layout_marginTop="@dimen/album_dp_10"
                android:layout_marginStart="@dimen/album_dp_10"
                android:layout_marginEnd="@dimen/album_dp_10"
                />
            <TextView
                android:id="@+id/bloodNumber_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_dp_50"
                android:padding="@dimen/album_dp_6"
                android:text="@string/Person_blood_num"
                android:layout_marginTop="@dimen/album_dp_10"
                android:layout_marginStart="@dimen/album_dp_10"
                android:layout_marginEnd="@dimen/album_dp_10"
                />

            <TextView
                android:id="@+id/hosspitalName_detail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_dp_50"
                android:padding="@dimen/album_dp_6"
                android:text="@string/hospital_name"
                android:layout_marginTop="@dimen/album_dp_10"
                android:layout_marginStart="@dimen/album_dp_10"
                android:layout_marginEnd="@dimen/album_dp_10"
                />

            <TextView
                android:id="@+id/hosspitalAddress_detail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/hospital_address"
                android:padding="@dimen/album_dp_6"
                android:layout_marginTop="@dimen/album_dp_10"
                android:layout_marginStart="@dimen/album_dp_10"
                android:layout_marginEnd="@dimen/album_dp_10"
                />
            <TextView
                android:id="@+id/phonNumber_detail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="@dimen/album_dp_6"
                android:text="@string/Person_phone_number"
                android:layout_marginTop="@dimen/album_dp_10"
                android:layout_marginStart="@dimen/album_dp_10"
                android:layout_marginEnd="@dimen/album_dp_10"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/album_dp_10"
                android:layout_marginStart="@dimen/album_dp_10"
                android:layout_marginEnd="@dimen/album_dp_10">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/album_dp_6"
                    android:text="@string/person_details"
                    android:textColor="@color/durban_ColorPrimaryBlack"
                    />
                <TextView
                    android:id="@+id/the_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/album_dp_6"
                    />

            </LinearLayout>
            <fragment
                android:id="@+id/googleMap_detailFragment"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_dp_200"
                android:layout_marginStart="@dimen/album_dp_10"
                android:layout_marginEnd="@dimen/album_dp_10"
                android:layout_marginTop="@dimen/album_dp_6"
                />

            <Button

                android:background="@color/green_complete"
                android:layout_width="match_parent"
                android:layout_height="@dimen/album_dp_50"
                android:layout_marginStart="@dimen/album_dp_10"
                android:layout_marginEnd="@dimen/album_dp_10"
                android:layout_marginTop="@dimen/album_dp_6"
                android:text="@string/conect"
                android:textSize="@dimen/album_dp_20"
                />

        </LinearLayout>
    </ScrollView>



</LinearLayout>