<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_splash"
    tools:context=".ui.fragment.loginscreen.ForgetPasswordFragment">

    <ImageView
        android:id="@+id/logo_id"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_marginTop="@dimen/album_dp_50"
        android:src="@drawable/ic_logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_forgetpassword"
        android:layout_marginTop="@dimen/album_dp_10"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/edit_phone_number"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_id"
        android:layout_marginTop="@dimen/album_dp_10"
        android:layout_marginLeft="@dimen/album_dp_10"
        android:layout_marginRight="@dimen/album_dp_10"
        android:hint="@string/phon_numpet"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/durban_dp_70"
        android:layout_marginLeft="@dimen/album_dp_10"
        android:layout_marginRight="@dimen/album_dp_10"
        android:background="#00C853"
        android:textSize="@dimen/album_dp_20"
        android:textColor="@color/cardview_light_background"
        android:id="@+id/btt_sendmassg"
        android:text="@string/btt_sendmssg_phonnmbe"

        />

</LinearLayout>